footer site-title size on mobile fix

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://athemes.com/theme/cali
 Author: aThemes
 Author URI: https://athemes.com
 Description: Cali is a powerful, flexible, and gorgeous theme for your blog site. Whether you’re looking to showcase your latest fashion products, chronicle your latest travel adventures, or create broader blog content, Cali is an outstanding choice. The theme features a clean, easy-to-navigate design, backed by solid code meeting WordPress’ best practices. What’s more, the theme offers WooCommerce support and is translation ready, making it easy to sell the products you showcase on your blog to a global audience. Cali makes it easy to prominently display your latest posts via a sleek home page carousel. It also brings a wealth of customization opportunities, including a huge variety of color and Google Fonts options. There’s also the option to add social media widgets, making it easy for your readers to share your content. All of these features make Cali an outstanding choice for practically any image-centric blog.
-Version: 1.0.0
+Version: 1.0.2
 License: GNU General Public License v3
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: cali
@@ -555,6 +555,12 @@ th {
 	}
 }
 
+@media (max-width: 1199px) {
+	.site-title--footer {
+		font-size: 36px;
+	}
+}
+
 @media (max-width: 782px) {
 	.header-is-sticky.admin-bar .header-top {
 		top: 46px; /* Height of the WordPress admin-bar */
@@ -584,7 +590,8 @@ th {
 		padding: 18px 0px;
 	}
 
-	.site-title--mobile {
+	.site-title--mobile,
+	.site-title--footer {
 		font-size: 24px;
 	}
 }
